# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "agent-gg"
version.workspace = true
edition.workspace = true
publish = false
description = "AI-agent interop cell: grpcuds server + grpcuds client over UDS (Agent runtime + scripted Assistant loop)."

[dependencies]
agent-domain.workspace = true
grpcuds = { workspace = true, features = ["client", "prost"] }
uds-harness.workspace = true
