# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "agent-tg"
version.workspace = true
edition.workspace = true
publish = false
description = "AI-agent interop cell: tonic (stock gRPC) server + grpcuds client over UDS. `cargo run` = live ollama demo (reverse)."

[dependencies]
agent-domain.workspace = true
grpcuds = { workspace = true, features = ["client", "prost"] }
uds-harness.workspace = true
