# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "x509-gt"
version.workspace = true
edition.workspace = true
publish = false
description = "X.509 interop cell: grpcuds server + tonic (stock gRPC) client over UDS (real cert agent)."

[dependencies]
x509-domain.workspace = true
uds-harness.workspace = true
tonic.workspace = true
tokio.workspace = true
