# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "x509-tg"
version.workspace = true
edition.workspace = true
publish = false
description = "X.509 interop cell: tonic (stock gRPC, deterministic mock) server + grpcuds client over UDS."

[dependencies]
x509-domain.workspace = true
grpcuds = { workspace = true, features = ["client", "prost"] }
uds-harness.workspace = true
