# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "agent-domain"
version.workspace = true
edition.workspace = true
publish = false
description = "AI-agent domain logic shared by the agent-gg/gt/tg cells: a grpcuds Agent+Assistant server, a tonic Agent+Assistant server, model backends (ollama/claude/scripted), and the transport-agnostic agent loop."

[lib]

[dependencies]
grpcuds = { workspace = true, features = ["prost", "client"] }
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uds-harness.workspace = true
serde_json.workspace = true
ureq.workspace = true

[build-dependencies]
grpcuds-build.workspace = true
tonic-prost-build.workspace = true
